change config structure migrations move to database package store slashes

--- a/config.json.example
+++ b/config.json.example
@@ -1,8 +1,12 @@
 {
-    "name": "Minter Explorer Extender",
-    "debug": true,
-    "database": {
-      "url": "postgres://postgres:postgres@localhost/postgres?sslmode=disable"
-    },
-     "minterApi": ""
+  "name": "Minter Explorer Extender",
+  "debug": true,
+  "database": {
+    "url": "postgres://postgres:postgres@localhost/postgres?sslmode=disable"
+  },
+  "minterApi": {
+    "isSecure": true,
+    "link": "127.0.0.1",
+    "port": "8841"
+  }
 }
