refactoring minter api and minter service

--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,7 @@
 {
   "name": "Minter Explorer Extender",
   "debug": true,
+  "baseCoin": "BIP",
   "database": {
     "url": "postgres://postgres:postgres@localhost/postgres?sslmode=disable"
   },
