--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     image: postgres
     restart: always
     ports:
-        - 54325:5432
+      - 54322:5432
     environment:
-        POSTGRES_DB: explorer_db
-        POSTGRES_USER: explorer_adm
-        POSTGRES_PASSWORD: password
+      POSTGRES_DB: explorer_db
+      POSTGRES_USER: minter_adm
+      POSTGRES_PASSWORD: password
     volumes:
-        - ./db_data:/var/lib/postgresql/data
-
+      - ./db_data:/var/lib/postgresql/data
